--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -3,5 +3,6 @@
     <string name="app_name">LED There Be Light</string>
     <string name="flash_on">ZAP</string>
     <string name="flash_off">VYP</string>
+    <string name="error_connect_to_camera">Nelze se připojit ke kameře</string>
 
 </resources>
